# vibe-miracleplus-skills

./: .gitignore  README.md  memory.md
docs/: FILTER-UPGRADE.md  FIXES.md  SKILLS-ANIMATION.md  app.js  index.html  styles.css
docs/data/: skills.json
docs/plan/: frontend-plan.md
reference/skills/built/: alpha-sight.md  person-analyzer.md  qi-signal-analysis.md
reference/skills/evaluated/: json-canvas.md  literature-review.md  obsidian-bases.md  obsidian-markdown.md  scientific-critical-thinking.md  scientific-writing.md
skills/alpha-sight/: LICENSE  SKILL.md  skill.json
skills/alpha-sight/assets/: report_template_en.md  report_template_zh.md
skills/alpha-sight/references/: arxiv_api.md  error_handling.md  report_templates.md  semantic_scholar_api.md  workflow_details.md
skills/alpha-sight/scripts/: arxiv_fetcher.py  get_arxiv_latest_v1114.py  index_manager.py  report_generator.py  semantic_scholar_fetcher.py
skills/person-analyzer/: .env.example  README.md  SKILL.md  index.json  pyproject.toml
skills/person-analyzer/assets/: report_template_en.md  report_template_zh.md
skills/person-analyzer/config/: domain_templates.json
skills/person-analyzer/references/: search_strategies.md
skills/person-analyzer/scripts/: __init__.py  config_loader.py  data_processor.py  index_manager.py  report_generator.py
web/: app.js  index.html
web/data/: skills.json
